# backboard-cli

./: .gitignore  AGENTS.md  Cargo.toml  install.sh
config/: models.json
prompts/system/: coder.txt
prompts/tools/: policy.txt
src/: main.rs
src/agent/: events.rs  mod.rs  prompts.rs  runner.rs  session.rs
src/backboard/: client.rs  models.rs
src/config/: mod.rs
src/runtime/: logging.rs  mod.rs  models.rs  todos.rs
src/tools/: registry.rs
src/tools/builtins/: command_ops.rs  file_ops.rs  mod.rs  search_ops.rs  state_ops.rs  utils.rs  web_ops.rs
src/tui/: input.rs  repl.rs
