[package]
name = "backboard-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
glob = "0.3"
owo-colors = "4.1"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.45", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.8", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.15"
